# Wait

./: CMakeLists.txt  README.md  Wait.code-workspace  vcpkg.json
Fonts/: Attributiuon.txt
Images/: Attribution.txt  Logo.xcf
src/: Plugin.cpp
